--- a/TheGame/Base.lproj/Main.storyboard
+++ b/TheGame/Base.lproj/Main.storyboard
@@ -34,46 +34,38 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Game Center connection required." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="quK-Ek-tee">
-                                <rect key="frame" x="15" y="498" width="345" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lrn-c9-5yj">
-                                <rect key="frame" x="15" y="524.5" width="345" height="30"/>
-                                <state key="normal" title="Log in through Settings"/>
-                                <connections>
-                                    <action selector="gotoSettings:" destination="ISV-GM-3yy" eventType="touchUpInside" id="Spz-eM-ASf"/>
-                                </connections>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lrn-c9-5yj">
+                                <rect key="frame" x="15" y="526" width="345" height="30"/>
+                                <state key="normal" title="play alone"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k3d-EU-BBF">
+                                <rect key="frame" x="98" y="488" width="179" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Connect to Game Server"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="quK-Ek-tee" firstAttribute="top" secondItem="MVX-JY-YYI" secondAttribute="bottom" constant="30" id="1xk-y0-Lz6"/>
                             <constraint firstItem="Lrn-c9-5yj" firstAttribute="centerX" secondItem="xlx-9M-mEJ" secondAttribute="centerX" id="ETY-L2-MB3"/>
                             <constraint firstItem="MVX-JY-YYI" firstAttribute="centerY" secondItem="xlx-9M-mEJ" secondAttribute="centerY" id="Ebx-A9-9Pu"/>
                             <constraint firstItem="Y7b-Yw-bNL" firstAttribute="centerX" secondItem="MVX-JY-YYI" secondAttribute="centerX" id="GnF-3C-ssB"/>
                             <constraint firstItem="xlx-9M-mEJ" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="qzj-PC-972" secondAttribute="bottom" constant="10" id="I2T-h8-WWE"/>
-                            <constraint firstItem="quK-Ek-tee" firstAttribute="width" secondItem="MVX-JY-YYI" secondAttribute="width" id="JCO-VK-yNK"/>
                             <constraint firstItem="MVX-JY-YYI" firstAttribute="width" relation="lessThanOrEqual" secondItem="xlx-9M-mEJ" secondAttribute="width" constant="-30" id="Nde-Gc-rqa"/>
                             <constraint firstItem="Y7b-Yw-bNL" firstAttribute="top" relation="greaterThanOrEqual" secondItem="xlx-9M-mEJ" secondAttribute="top" constant="10" id="Oyv-bO-D26"/>
                             <constraint firstItem="MVX-JY-YYI" firstAttribute="centerX" secondItem="xlx-9M-mEJ" secondAttribute="centerX" id="VGd-3D-A6e"/>
+                            <constraint firstItem="k3d-EU-BBF" firstAttribute="width" secondItem="MVX-JY-YYI" secondAttribute="width" multiplier="0.518841" id="W5D-uM-CDz"/>
                             <constraint firstItem="qzj-PC-972" firstAttribute="top" secondItem="MVX-JY-YYI" secondAttribute="bottom" constant="125" id="Ys3-71-74h"/>
-                            <constraint firstItem="Lrn-c9-5yj" firstAttribute="top" secondItem="quK-Ek-tee" secondAttribute="bottom" constant="6" id="beQ-nj-eBH"/>
-                            <constraint firstItem="quK-Ek-tee" firstAttribute="centerX" secondItem="MVX-JY-YYI" secondAttribute="centerX" id="bfn-Nb-Ez2"/>
+                            <constraint firstItem="k3d-EU-BBF" firstAttribute="top" secondItem="MVX-JY-YYI" secondAttribute="bottom" constant="20" id="cSA-QE-u6a"/>
+                            <constraint firstItem="Lrn-c9-5yj" firstAttribute="top" secondItem="k3d-EU-BBF" secondAttribute="bottom" constant="8" id="gBy-Q2-Oan"/>
                             <constraint firstItem="qzj-PC-972" firstAttribute="centerX" secondItem="MVX-JY-YYI" secondAttribute="centerX" id="mg0-Mk-80L"/>
                             <constraint firstItem="MVX-JY-YYI" firstAttribute="top" secondItem="Y7b-Yw-bNL" secondAttribute="bottom" constant="50" id="tNg-pz-WcG"/>
                             <constraint firstItem="Y7b-Yw-bNL" firstAttribute="width" secondItem="xlx-9M-mEJ" secondAttribute="width" id="tNm-hU-nVD"/>
+                            <constraint firstItem="k3d-EU-BBF" firstAttribute="centerX" secondItem="JSk-wM-pcr" secondAttribute="centerX" id="uTl-7H-blc"/>
                             <constraint firstItem="qzj-PC-972" firstAttribute="width" secondItem="MVX-JY-YYI" secondAttribute="width" id="wIn-eX-9vS"/>
                             <constraint firstItem="Lrn-c9-5yj" firstAttribute="width" secondItem="MVX-JY-YYI" secondAttribute="width" id="x5e-CF-VdV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="xlx-9M-mEJ"/>
                     </view>
-                    <connections>
-                        <outlet property="connectionLabel" destination="quK-Ek-tee" id="Mhl-TR-dRT"/>
-                        <outlet property="settingsButton" destination="Lrn-c9-5yj" id="T5S-eD-MRH"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="T0E-ir-Nmm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
