--- a/TheGame/Boards/Base.lproj/Startup.storyboard
+++ b/TheGame/Boards/Base.lproj/Startup.storyboard
@@ -221,44 +221,39 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="required" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="MVo-gd-LOE" customClass="DictationAwareTextView" customModule="TheGame" customModuleProvider="target">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="required" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="MVo-gd-LOE" customClass="LoginTextField" customModule="TheGame" customModuleProvider="target">
                                 <rect key="frame" x="20" y="79" width="280" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="uvX-rF-XCO"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="username"/>
-                                <connections>
-                                    <action selector="textDidChange:" destination="dn6-ku-MNg" eventType="editingChanged" id="R3n-jN-wp6"/>
-                                    <outlet property="delegate" destination="dn6-ku-MNg" id="KZs-Hd-izB"/>
-                                    <outlet property="pasteDelegate" destination="dn6-ku-MNg" id="gnK-Tr-Swg"/>
-                                </connections>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="passwordFilter" value="NO"/>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="allowPasswordCharacters" value="NO"/>
+                                </userDefinedRuntimeAttributes>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="required" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="y9a-KR-shf" customClass="DictationAwareTextView" customModule="TheGame" customModuleProvider="target">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="required" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="y9a-KR-shf" customClass="LoginTextField" customModule="TheGame" customModuleProvider="target">
                                 <rect key="frame" x="20" y="142" width="280" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="sHE-d8-X4l"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" secureTextEntry="YES" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="new-password"/>
-                                <connections>
-                                    <outlet property="delegate" destination="dn6-ku-MNg" id="OaV-AZ-3FD"/>
-                                    <outlet property="dictationDelegate" destination="dn6-ku-MNg" id="qTZ-Uu-dea"/>
-                                    <outlet property="pasteDelegate" destination="dn6-ku-MNg" id="dha-Zg-QCr"/>
-                                </connections>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="allowPasswordCharacters" value="YES"/>
+                                </userDefinedRuntimeAttributes>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="retype to confirm" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="tON-XH-4Dd" customClass="DictationAwareTextView" customModule="TheGame" customModuleProvider="target">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="retype to confirm" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="tON-XH-4Dd" customClass="LoginTextField" customModule="TheGame" customModuleProvider="target">
                                 <rect key="frame" x="20" y="177" width="280" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="teB-sw-bhM"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" secureTextEntry="YES" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="new-password"/>
-                                <connections>
-                                    <outlet property="delegate" destination="dn6-ku-MNg" id="bdZ-J1-LhL"/>
-                                    <outlet property="dictationDelegate" destination="dn6-ku-MNg" id="EDm-7X-Fpy"/>
-                                    <outlet property="pasteDelegate" destination="dn6-ku-MNg" id="dak-kC-lE9"/>
-                                </connections>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="allowPasswordCharacters" value="YES"/>
+                                </userDefinedRuntimeAttributes>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="optional" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="du1-9F-kcU">
                                 <rect key="frame" x="20" y="252" width="280" height="30"/>
