--- a/TheGame/Boards/Base.lproj/Startup.storyboard
+++ b/TheGame/Boards/Base.lproj/Startup.storyboard
@@ -26,7 +26,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" image="dice_splash" translatesAutoresizingMaskIntoConstraints="NO" id="MVX-JY-YYI">
-                                        <rect key="frame" x="0.0" y="79" width="300.00000000000023" height="200"/>
+                                        <rect key="frame" x="0.0" y="79" width="300" height="200"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="MVX-JY-YYI" secondAttribute="height" multiplier="1.5" id="P5o-5r-Cuq"/>
                                         </constraints>
@@ -255,6 +255,9 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="yes" smartQuotesType="no" textContentType="name"/>
+                                <connections>
+                                    <outlet property="delegate" destination="dn6-ku-MNg" id="bat-EB-3O8"/>
+                                </connections>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="optional" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="YfE-lz-VYB">
                                 <rect key="frame" x="20" y="317" width="280" height="30"/>
@@ -263,6 +266,9 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="email"/>
+                                <connections>
+                                    <outlet property="delegate" destination="dn6-ku-MNg" id="JHb-IT-NpR"/>
+                                </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AZF-dX-IgS">
                                 <rect key="frame" x="20" y="117" width="65.5" height="17"/>
@@ -303,6 +309,9 @@
                                 <state key="normal" title="Create Account">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="createAccount:" destination="dn6-ku-MNg" eventType="touchUpInside" id="yO5-5z-19Z"/>
+                                </connections>
                             </button>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6p6-Cp-dhb" userLabel="password info">
                                 <rect key="frame" x="280" y="115.5" width="20" height="20"/>
@@ -342,6 +351,12 @@
                                 <color key="textColor" name="dieRed"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Mb-Ua-XGF">
+                                <rect key="frame" x="243" y="228.5" width="29" height="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" name="dieRed"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -351,6 +366,7 @@
                             <constraint firstItem="DJp-2M-ETI" firstAttribute="trailing" secondItem="cRC-lO-Ify" secondAttribute="trailing" constant="20" id="6hl-A5-hMv"/>
                             <constraint firstItem="DAk-Y3-Aa5" firstAttribute="top" secondItem="cRC-lO-Ify" secondAttribute="bottom" constant="10" id="7mg-7B-lxY"/>
                             <constraint firstItem="DJp-2M-ETI" firstAttribute="trailing" secondItem="YfE-lz-VYB" secondAttribute="trailing" constant="20" id="85U-lK-N6f"/>
+                            <constraint firstItem="7Mb-Ua-XGF" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="MsJ-Ks-B91" secondAttribute="trailing" id="CBE-M1-6cB"/>
                             <constraint firstItem="tON-XH-4Dd" firstAttribute="leading" secondItem="DJp-2M-ETI" secondAttribute="leading" constant="20" id="Dc1-Oz-LsE"/>
                             <constraint firstItem="MsJ-Ks-B91" firstAttribute="top" secondItem="tON-XH-4Dd" secondAttribute="bottom" constant="20" id="DjJ-4e-qhZ"/>
                             <constraint firstItem="DJp-2M-ETI" firstAttribute="bottom" secondItem="DAk-Y3-Aa5" secondAttribute="bottom" constant="20" id="Ekr-gG-B9F"/>
@@ -359,6 +375,7 @@
                             <constraint firstItem="ypz-Ff-JYR" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DJp-2M-ETI" secondAttribute="leading" id="Ib4-FW-0IX"/>
                             <constraint firstItem="ypz-Ff-JYR" firstAttribute="trailing" secondItem="YfE-lz-VYB" secondAttribute="trailing" id="L2b-qR-lY7"/>
                             <constraint firstItem="XZb-sw-cDb" firstAttribute="centerY" secondItem="MsJ-Ks-B91" secondAttribute="centerY" id="LvO-Zu-MAL"/>
+                            <constraint firstItem="7Mb-Ua-XGF" firstAttribute="centerY" secondItem="MsJ-Ks-B91" secondAttribute="centerY" id="NmQ-Th-RCr"/>
                             <constraint firstItem="YfE-lz-VYB" firstAttribute="leading" secondItem="DJp-2M-ETI" secondAttribute="leading" constant="20" id="NsY-Yc-WsJ"/>
                             <constraint firstItem="nGS-oY-BbX" firstAttribute="trailing" secondItem="MVo-gd-LOE" secondAttribute="trailing" id="POa-de-4p9"/>
                             <constraint firstItem="du1-9F-kcU" firstAttribute="leading" secondItem="DJp-2M-ETI" secondAttribute="leading" constant="20" id="QKF-TU-ZsD"/>
@@ -396,6 +413,7 @@
                             <constraint firstItem="DJp-2M-ETI" firstAttribute="trailing" secondItem="DAk-Y3-Aa5" secondAttribute="trailing" constant="10" id="tJT-lf-uqr"/>
                             <constraint firstItem="DJp-2M-ETI" firstAttribute="trailing" secondItem="tON-XH-4Dd" secondAttribute="trailing" constant="20" id="ujA-bI-NsC"/>
                             <constraint firstItem="cRC-lO-Ify" firstAttribute="leading" secondItem="DJp-2M-ETI" secondAttribute="leading" constant="20" id="w55-Ru-ALC"/>
+                            <constraint firstItem="XZb-sw-cDb" firstAttribute="leading" secondItem="7Mb-Ua-XGF" secondAttribute="trailing" constant="8" id="zMQ-FD-KEh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="DJp-2M-ETI"/>
                     </view>
@@ -404,6 +422,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="createButton" destination="ypz-Ff-JYR" id="kdQ-Fg-vjg"/>
+                        <outlet property="displayNameError" destination="7Mb-Ua-XGF" id="9MF-3y-aAO"/>
                         <outlet property="displayNameTextField" destination="du1-9F-kcU" id="zCS-xe-Raf"/>
                         <outlet property="emailError" destination="ZQe-RD-ACK" id="X2y-KR-ChJ"/>
                         <outlet property="emailTextField" destination="YfE-lz-VYB" id="YlR-NW-oGb"/>
